Introduction into related work

--- a/Dissertation/part_related_work.tex
+++ b/Dissertation/part_related_work.tex
@@ -7,18 +7,48 @@
 % Разделить Java и Си?
 
 В настоящее время существует множество различных техник и подходов для поиска ошибок в программном обеспечении.
-Однако, универсального инструмента, позволяющего решать задачи любой сложности, создать невозможно.
-Но этого мало, до сих пор не выработана единая методика сравнения инструментов, по которой можно было бы оценить степень пригодности некоторого инструмента для решения конкретной задачи или класса задач.
+Однако, универсального метода, позволяющего решать задачи любой сложности, создать невозможно.
+Поэтому во многих отраслях одновременно применяются различные методы верификации, которые позволяют нивелировать недостатки друг друга.
+
+Можно выделить следующие классы методов верификации:
+
+\begin{itemize}
+\item экспертиза;
+\item статические методы;
+\item динамические методы;
+\item формальные методы.
+\end{itemize}
+
+Следует сразу отметить, что данная классификация является достаточно условной, и наиболее успешно показывают себя методы, объединяющие в себе несколько различных подходов. 
+
+Самым простым методом верификации программного обеспечения является экспертиза исходного кода. 
+К ее достоинствам относится то, что она позволяет выявлять практически любые ошибки, однако ее эффективность сильно зависит от опыта и компетенции экспертов.
+Ее особенностью является то, что она практически не автоматизируется, а значит, ее эффективность применения к большому объему исходного кода значительно снижается.
+
+Методы автоматического поиска ошибок традиционно разделяют на два основных класса: статические и динамические. 
+Теоретически оба эти подхода способны обнаруживать ошибки полностью автоматически, то есть без участия человека, однако на практике участие эксперта значительно повышает эффективность подходов.
+
+Методы динамического анализа анализируют программное обеспечение в процессе его выполнения. 
+Исторически такие методы берут свое начало из тестирования и мониторинга, однако в дальнейшем развиваются методы анализа внутреннего состояния программы в процессе ее выполнения.
+В процессе развития статических методов они начинают комбинироваться с динамическими и возникают статико-динамические подходы.
+
+Статические методы поиска ошибок, в отличие от динамического анализа, проверяют исходный код программы без его реального выполнения. 
+Традиционно такие методы разделяют на те, которые берут свое начало из компиляторных технологий и отличаются высокой скоростью работы, и на те, которые основываются на формальных методах.
+Мы будем называть первый класс методами статического анализа, а второй -- методами статической верификации.
+
+Формальные методы верификации отличаются строгим математическим доказательством корректности программ, однако требуют значительного участия эксперта в доказательстве.
+
+%Но этого мало, до сих пор не выработана единая методика сравнения инструментов, по которой можно было бы оценить степень пригодности некоторого инструмента для решения конкретной задачи или класса задач.
 
 %Существует много разных направлений развития инструментов
-Предпринимаются попытки сравнить инструменты, реализованные в рамках одного подхода.
-Например, соревнования инструментов статической верификации SV-COMP позволили накопить большой набор входных данных для инструментов статической вериифкации и результаты запусков множества инструментов на этом наборе.
-Любой другой инструмент может быть запущен на наборе задач и затем полученные результаты позволят сравнить качество его анализа и скорость с другими инструментами.
-Однако, даже такой способ имеет ряд недостатков. 
-\begin{enumerate}
-\item Сложно сравнивать инструменты различных подходов, например, инструменты динамического анализа требуют для сравнения совсем другие характеристики, чем инструменты статического анализа.
-\item Набор небольших тестов не способен показать преимущества и недостатки работы инструментов на больших объемах кода.
-\end{enumerate}
+%Предпринимаются попытки сравнить инструменты, реализованные в рамках одного подхода.
+%Например, соревнования инструментов статической верификации SV-COMP позволили накопить большой набор входных данных для инструментов статической вериифкации и результаты запусков множества инструментов на этом наборе.
+%Любой другой инструмент может быть запущен на наборе задач и затем полученные результаты позволят сравнить качество его анализа и скорость с другими инструментами.
+%Однако, даже такой способ имеет ряд недостатков. 
+%\begin{enumerate}
+%\item Сложно сравнивать инструменты различных подходов, например, инструменты динамического анализа требуют для сравнения совсем другие характеристики, чем инструменты статического анализа.
+%\item Набор небольших тестов не способен показать преимущества и недостатки работы инструментов на больших объемах кода.
+%\end{enumerate}
 
 Выделим те критерии инструментов верификации, которые являются важными для решения поставленной задачи по проверки корректной синхронизации системного программного обеспечения.
 Основным объектом исследования является системное программное обеспечение, которое применяется в критичных областях, в которых цена ошибки очень высока, поэтому одним из основных характеристик должна стать точность метода: он не должен в общем случае пропускать ошибки.
@@ -27,10 +57,19 @@
 С этим же связана масштабируемость: должна быть возможность применения инструмента к реальным программным системам, состоящим из сотен тысяч строк кода.
 Кроме того, метод должен адекватно работать со сложными конструкциями языка Си, которые используются в системном программном обеспечении, как то: адресная арифметика, кастирование одних типов к другим и др.
 
-Исходя из этих критериев проведем исследование существующих методов и подходов к анализу программного обеспечения.
-Мы не будем рассматривать формальные методы доказательства корректности многопоточных программ, которые основаны на методах дедуктивной верификации, например,~\cite{Le:2015:TRC}.
+Операционная система является достаточно сложной системой, и построить формальную модель ядра удалось только для т.н. микроядерной архитектуры seL4~\cite{seL4}.
+Однако, применить формальные методы доказательства к монолитному ядру достаточно сложно.
+Поэтому далее, мы не будем рассматривать формальные методы доказательства корректности многопоточных программ, которые основаны на методах дедуктивной верификации, например,~\cite{Le:2015:TRC}.
 Хотя такие методы понемногу развиваются, они до сих пор с большим трудом применяются даже к небольшим пользовательским программам. 
 Например, в упомянутой статье авторы проводили практическое исследование своего метода на искусственных тестах, типа вычисления чисел Фибоначчи.
+Также мы исключим из рассмотрения специальные методы экспертизы, задача которых сводится больше к обеспечению удобства анализа кода экспертом.
+
+Существуют различные статьи, посвященные обзору техник поиска гонок, например,~\cite{raceSurvey,raceSurvey2}.
+Однако, они покрывают определенный класс методов, например, методы динамического анализа.
+Таким образом, необходимо провести полноценный обзор существующих техник динамического анализа, статического анализа и статической верификации.
+%Исходя из этих критериев проведем исследование существующих методов и подходов к анализу программного обеспечения.
+
+
 
 \section{Методы динамического анализа многопоточных программ}
 \label{rw:dynamic}
@@ -245,6 +284,8 @@ DataCollider был применен к нескольким драйверам 
 Поиск состояний гонки является достаточно трудоемкой задачей по сравнению с поиском таких ошибок, поэтому большая часть статических анализаторов не предоставляет возможность поиска ошибок, связнных с некорректным взаимодействием потоков.
 Тем не менее, существуют различные академические инструменты статического анализа, позволяющие находить состояния гонки.
 
+\subsection{Методы статического анализа для поиска состояний гонки}
+
 Статья~\cite{Pratikakis:2011} представляет инструмент Locksmith для статического поиска гонок.
 Locksmith реализован на основе библиотеки CIL~\cite{CIL}, которая используется для разбора исходного кода.
 Инструмент последовательно и независимо друг от друга проводит несколько стадий анализа, собирая информацию о потоках данных, потоке управления, разделяемых данных и используемых примитивах синхронизации.
@@ -275,9 +316,11 @@ Locksmith реализован на основе библиотеки CIL~\cite{
 Авторы применили инструмент модулям операционной системы Linux, при этом получили более 5000 предупреждений.
 Такое количество предупреждений проанализировать вручную невозможно, поэтому авторы выбрали некоторое подмножество, проанализировали его, а затем разработали набор неточных фильтров, которые сокращают количество предупреждений.
 
-Похожим образом действуют авторы IteRace~\cite{Radoi:2015:ETS}.
+Похожим образом действуют авторы IteRace~\cite{Radoi:2015:ETS}, инструмента для поиска ошибок синхронизации в Java программах.
 Сначала определяются алиасы с помощью анализа Андерсена, затем для каждой области памяти проверяются синхранизационные примитивы, что позволяет вычислить множество потенциальных состояний гонки.
-Затем применяются различные фильтры, которые позволяют сократить количество ложных сообщений об ошибке.
+Затем применяются различные оптимизации, которые позволяют сократить количество ложных сообщений об ошибке.
+В их числе как оптимизации в процессе анализа (рассмотрение только двух потоков, выделение областей кода, которые могут выполняться только в однопоточном режиме), так и оптимизации поиска состояний гонки после проведения анализа кода.
+Результаты позволяют заключить, что данный метод является практически применимым, однако применяемые оптимизации являются специфичными для Java-программ.
 
 Еще один похожий инструмент представлен в статье~\cite{Di:2016:ADD}.
 В нем авторы также с помощью простого анализа находят множество доступов к данным, а затем применяют некоторые фильтры, которые позволяют исключить ложные сообщения о состояних гонки.
@@ -318,6 +361,8 @@ Locksmith реализован на основе библиотеки CIL~\cite{
 Таким образом, можно сказать, что точный анализ алиасов неприменим к большим программным системам, в частности, к ядру операционной системы, так как число разделяемых переменных будет достаточно большим, а значит, сам анализ алиасов будет требовать неприемлемое количество времени.
 
 %-- Классы ошибок
+
+\subsection{Узкоспециализированные методы статического анализа}
 
 %Например, в статье ~\cite{Naik:2009} представлен алгоритм поиска состояний взаимной блокировки для Java программ.
 %Инструмент производит k-объектный, контекстно-чувствительный анализ исходного кода, строит граф вызовов и граф указателей (points-to).
@@ -393,6 +438,8 @@ Locksmith реализован на основе библиотеки CIL~\cite{
 Минусом подхода является высокое требование к ресурсам.
 %Кроме того, одним из ограничений подхода является отсутствие поддержки операций и объектов, которые могут привести к потенциально бесконечному множеству состояний.
 %К ним относятся, например, циклы, рекурсия, а также операция с динамически выделяемой памятью. 
+
+\subsection{Методы статического верификации на основе чередований потоков}
 
 Первыми, как наиболее простые, стали развиваться методы, рассматривающие все возможные чередования потоков.
 Для применения таких методов к многопоточным программам необходимо упорядочить последовательность операций во всех потоках, чтобы иметь возможность построить логическую формулу пути.
@@ -473,6 +520,8 @@ Locksmith реализован на основе библиотеки CIL~\cite{
 
 %--- Translation
 
+\subsection{Методы статической верификации на основе трансляции}
+
 Уже упоминались подходы, которые применяют трансляцию параллельную программу в последовательную для последующей верификации.
 Следует отметить статьи, посвященные отдельно этой проблеме трансляции (англ. sequentilization) с последующей ее верификацией существующими инструментами анализа последовательных программ.
 Все существующие трансляторы используют следующие ограничения: 
@@ -509,6 +558,41 @@ Locksmith реализован на основе библиотеки CIL~\cite{
 Он использует только алгоритм Lockset и не имеет возможности расширить подход другими видами анализа.
 Авторы предлагают применять этот инструмент в связке с более точным инструментом верификации CORALL. 
 
+\subsection{Методы статической верификации на основе раздельного рассмотрения потоков}
+
+Все рассмотренные выше подходы так или иначе учитывают взаимодействие потоков друг с другом. 
+На реальных программных системах это приводит к комбинаторному взрыву числа возможных вариантов выполнения нескольких потоков.
+Для решения этой проблемы был предложен подход с абстракцией от окружения потока, т.н. подход с раздельным рассмотрением потоков (англ. thread-modular approach). 
+В самом простом варианте этот подход был описан еще в~\cite{ThreadModular03}.
+%Our approach is based on similar ideas, but also use an abstraction.
+Затем этот подход был дополнен предикатной абстракцией в~\cite{Henzinger:2004}.
+В этой статье пока рассматривался только один поток в нескольких копиях, то есть окружение формировалось самим же потоком, а примитивы синхронизации вообще не использовались.
+
+Расширение подхода с раздельным рассмотрением потоков и абстракцией было представлено в~\cite{Malkis:2006}, а затем реализовано в инструменте TAR~\cite{TAR}.
+В этом подходе была предложена идея эффектов от потока, которые вычислялись на основе действий потока.
+Эти эффекты затем применялись к другим потокам.
+Примитивы синхронизации были реализованы, как обыкновенные переменные.
+
+В статье\cite{ShapeTM} представлено применение подхода с раздельным рассмотрением потоков для анализа динамически выделяемой памяти (англ. Shape analysis). 
+В подходе предполагалось итеративное построение инвариантов памяти для доказательства корректной работы с памятью в многопоточной программе.
+Несмотря на интересную идею, применение данного инструмента было возможно на небольших тестовых программах, подготовленных на основе драйверов ОС Windows.
+
+Похожие идеи были представлены в статьях~\cite{Threader:2011,Gupta:2011:POPL,Gupta:2011}, которые представляют инструмент Threader.
+Основная идея метода заключается в поиске некоторого инварианта для программы, из которого следует доказываемое свойство.
+В процессе анализа строится абстракция, при этом для окружения используется аппроксимация сверху, основанная на Хорновских дизъюнктах.
+Если в какой-то момент возникнет состояние, которое не противоречит проверяемому свойству, абстракция уточняется.
+При этом уточняются как состояния этой абстракции, так и эффекты, то есть, взаимодействие потоков.
+Threader не ограничивает число возможных переключений контекста.
+
+Для оценки результатов использовались примеры, являющиеся упрощенными моделями некоторых реальных программ, таких, как драйвера ОС Windows и Linux.
+В основном, размер тестов варьировался в районе 100 строк, при этом время работы инструмента на некоторых примерах составляло несколько минут, а на некоторых превышало ограничение в 15 минут. 
+В статье~\cite{Threader:svcomp} авторы предоставляют результаты запуска инструмента на некотором общедоступном наборе тестов, который используется для ежегодного соревнования инструментов статической верификации. 
+В качестве тестовых примеров там используются, в основном, небольшие рукописные программы.
+Большинство инструментов, принимающих там участие, не способны справится с более-менее реальным кодом.
+Threader запускался на 32 тестах из категории «Параллельность» и набрал 43 балла из 49 возможных. Правильный вердикт был выдан на 28 тестах.
+
+
+\subsection{Другие методы статической верификации}
 %----
 
 В статье ~\cite{Cohen:2009} авторы подходят к проблеме поиска доказательства для многопоточной программы с другой стороны. 
@@ -555,37 +639,6 @@ Locksmith реализован на основе библиотеки CIL~\cite{
 Во время создания нового объекта или захвата монитора для него разрешение устанавливается на 100\%.
 При доступе к объекту строится формула из ограничений и подается на вход решателю.
 Никаких экспериментов не было проведено.
-
-Все рассмотренные выше подходы так или иначе учитывают взаимодействие потоков друг с другом. 
-На реальных программных системах это приводит к комбинаторному взрыву числа возможных вариантов выполнения нескольких потоков.
-Для решения этой проблемы был предложен подход с абстракцией от окружения потока, т.н. подход с раздельным рассмотрением потоков (англ. thread-modular approach). 
-В самом простом варианте этот подход был описан еще в~\cite{ThreadModular03}.
-%Our approach is based on similar ideas, but also use an abstraction.
-Затем этот подход был дополнен предикатной абстракцией в~\cite{Henzinger:2004}.
-В этой статье пока рассматривался только один поток в нескольких копиях, то есть окружение формировалось самим же потоком, а примитивы синхронизации вообще не использовались.
-
-Расширение подхода с раздельным рассмотрением потоков и абстракцией было представлено в~\cite{Malkis:2006}, а затем реализовано в инструменте TAR~\cite{TAR}.
-В этом подходе была предложена идея эффектов от потока, которые вычислялись на основе действий потока.
-Эти эффекты затем применялись к другим потокам.
-Примитивы синхронизации были реализованы, как обыкновенные переменные.
-
-В статье\cite{ShapeTM} представлено применение подхода с раздельным рассмотрением потоков для анализа динамически выделяемой памяти (англ. Shape analysis). 
-В подходе предполагалось итеративное построение инвариантов памяти для доказательства корректной работы с памятью в многопоточной программе.
-Несмотря на интересную идею, применение данного инструмента было возможно на небольших тестовых программах, подготовленных на основе драйверов ОС Windows.
-
-Похожие идеи были представлены в статьях~\cite{Threader:2011,Gupta:2011:POPL,Gupta:2011}, которые представляют инструмент Threader.
-Основная идея метода заключается в поиске некоторого инварианта для программы, из которого следует доказываемое свойство.
-В процессе анализа строится абстракция, при этом для окружения используется аппроксимация сверху, основанная на Хорновских дизъюнктах.
-Если в какой-то момент возникнет состояние, которое не противоречит проверяемому свойству, абстракция уточняется.
-При этом уточняются как состояния этой абстракции, так и эффекты, то есть, взаимодействие потоков.
-Threader не ограничивает число возможных переключений контекста.
-
-Для оценки результатов использовались примеры, являющиеся упрощенными моделями некоторых реальных программ, таких, как драйвера ОС Windows и Linux.
-В основном, размер тестов варьировался в районе 100 строк, при этом время работы инструмента на некоторых примерах составляло несколько минут, а на некоторых превышало ограничение в 15 минут. 
-В статье~\cite{Threader:svcomp} авторы предоставляют результаты запуска инструмента на некотором общедоступном наборе тестов, который используется для ежегодного соревнования инструментов статической верификации. 
-В качестве тестовых примеров там используются, в основном, небольшие рукописные программы.
-Большинство инструментов, принимающих там участие, не способны справится с более-менее реальным кодом.
-Threader запускался на 32 тестах из категории «Параллельность» и набрал 43 балла из 49 возможных. Правильный вердикт был выдан на 28 тестах.
 
 Рассмотренные подходы проверки моделей позволяют обеспечить корректность анализа в определенных ограничениях, однако все они испытывают определенные проблемы при применении к реальному программному обеспечению.
 Подход с раздельным рассмотрением потоков является перспективным решением проблемы комбинаторного взрыва числа состояний программы.
