--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -49,6 +49,25 @@ numpages = {8},
 keywords = {clock synchronization, multiprocess systems, computer networks, distributed systems}
 }
 
+@article{seL4,
+author = {Klein, Gerwin and Andronick, June and Elphinstone, Kevin and Murray, Toby and Sewell, Thomas and Kolanski, Rafal and Heiser, Gernot},
+title = {Comprehensive Formal Verification of an OS Microkernel},
+year = {2014},
+issue_date = {February 2014},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {32},
+number = {1},
+issn = {0734-2071},
+url = {https://doi.org/10.1145/2560537},
+doi = {10.1145/2560537},
+journal = {ACM Trans. Comput. Syst.},
+month = feb,
+articleno = {Article 2},
+numpages = {70},
+keywords = {operating systems, seL4, Isabelle/HOL, L4, microkernel}
+}
+
 @InProceedings{RaceSurvey,
 author="Raza, Aoun",
 editor="Grigoriev, Dima
