--- a/Dissertation/part_implementation.tex
+++ b/Dissertation/part_implementation.tex
@@ -724,7 +724,7 @@ $e' = e \cup \{a \to shared\}$
 
 Поддерживаются следующие типы операторов:
 \begin{itemize}
-\item Присваивание. Для левой части присваивания формируется идентификатор (множество идентификаторов) и добаляется тип доступа на запись, для правило части присваивания формируется идентификатор (множество идентификаторов) и добавляется тип доступа на чтение.
+\item Присваивание. Для левой части присваивания формируется идентификатор (множество идентификаторов) и добавляется тип доступа на запись, для правой части присваивания формируется идентификатор (множество идентификаторов) и добавляется тип доступа на чтение.
 \item Условие. Формируется идентификатор (множество идентификаторов) с типом доступа на чтение.
 \item Вызов функции. Для каждого аргумента формируется идентификатор (множество идентификаторов) с типом доступа на чтение.
 \item Возврат из функции. Для возвращаемого значения формируется идентификатор (множество идентификаторов) с типом доступа на чтение. В случае, если возвращаемое значение присваивается в некоторую переменную, для этой переменной формируется идентификатор (множество идентификаторов) с типом доступа на запись.
@@ -740,7 +740,7 @@ $e' = e \cup \{a \to shared\}$
 \end{itemize}
 
 После построения множества доступов к памяти, для каждого идентификатора необходимо определить, существует ли пара доступов, которая образует гонку.
-Каждая пара доступов проверяется на совместность, то есть на возможность одновременного выполнения
+Каждая пара доступов проверяется на совместность, то есть на возможность одновременного выполнения.
 Для этого используется понятие совместности переходов. Совместность означает, что два частичных абстрактных состояния могут быть частью одного глобального состояния.
 Или, другими словами, один переход может быть применен, как переход в окружении, к другому переходу и наоборот, откуда следует, что эти два перехода могут быть выполнены параллельно.
 Таким образом, предложенный подход является обобщением подхода Lockset~\cite{eraser97}, который определяет состояние гонки, как два доступа к некоторой памяти с непересекающимся множеством блокировок.
@@ -753,10 +753,7 @@ $e' = e \cup \{a \to shared\}$
 \subsection{Идентификаторы доступа к памяти}
 \label{subsect_impl_identifiers}
 
-Обычно под состоянием гонки подразумевается ситуация, при которой имеет место одновременный доступ к некоторой памяти из разных потоков, причем один из доступов должен быть записью.
-Два основных вопроса, которые возникают при статическом поиске гонок: как определить, что доступ производится к одной и той же памяти, и как определить одновременность доступов.
-Дальше будут подробно представлены эти две особенности в предлагаемом подходе.
-
+Одним из основных вопросов, которые возникают при статическом поиске гонок: как определить, что доступ производится к одной и той же памяти.
 При описании формальной модели программы использовался простой императивный язык программирования, который поддерживает разделяемые данные, представленные только глобальными переменными.
 В реальном программном обеспечении используется большое количество операций с указателями, структурами и более сложными типами данных.
 Как уже отмечалось в обзоре, многие точные инструменты статической верификации, в частости инструменты, реализующие методы ограничиваемой проверки моделей, вообще не распространяют свои подходы на программы с указателями, ограничиваясь только глобальными переменными.
@@ -862,7 +859,7 @@ $point$ -- это срез информации, содержащейся в $us
 Если имеется $point$ с меньшим количеством блокировок, то его имеет смысл рассматривать в первую очередь.
 Например, $point_1$ содержит внутри $states$ состояние LockCPA, в котором находится только одна блокировка $lock_1$.
 А $point_2$ содержит две блокировки $lock_1$ и $lock_2$.
-Какое бы парный $point_3$ мы не взяли, имеет смысл рассматривать с ним только $point_1$, так как если существует состояние гонки с $point_2$, будет иметь место и состояние гонки с $point_1$.
+Какой бы парный $point_3$ мы не взяли, имеет смысл рассматривать с ним только $point_1$, так как если существует состояние гонки с $point_2$, будет иметь место и состояние гонки с $point_1$.
 При этом возможны ситуации, в которых состояние гонки будет иметь место только в паре с $point_1$.
 
 Конечно, такая оптимизация требует полного покрытия всех состояний из $states$.
