--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -11,6 +11,26 @@ location = {Vancouver, BC, Canada},
 series = {OSDI’10}
 }
 
+@INPROCEEDINGS{VerySMART,
+author={T. L. {Nguyen} and P. {Schrammel} and B. {Fischer} and S. L. {Torre} and G. {Parlato}},
+booktitle={2017 32nd IEEE/ACM International Conference on Automated Software Engineering (ASE)},
+title={Parallel bug-finding in concurrent programs via reduced interleaving instances},
+year={2017},
+volume={},
+number={},
+pages={753-764},
+doi={10.1109/ASE.2017.8115686},
+ISSN={null},
+month={Oct},
+}
+
+@article{VerificationMethods,
+ author = {В. В. Кулямин},
+ title = {Методы верификации программного обеспечения},
+ year = {2008},
+ numpages = {111},
+}
+
 @article{ShapeTM,
  author = {Gotsman, Alexey and Berdine, Josh and Cook, Byron and Sagiv, Mooly},
  title = {Thread-Modular Shape Analysis},
@@ -43,7 +63,7 @@ issn = {0001-0782},
 url = {https://doi.org/10.1145/359545.359563},
 doi = {10.1145/359545.359563},
 journal = {Commun. ACM},
-month = jul,
+month = {jul},
 pages = {558–565},
 numpages = {8},
 keywords = {clock synchronization, multiprocess systems, computer networks, distributed systems}
@@ -62,7 +82,7 @@ issn = {0734-2071},
 url = {https://doi.org/10.1145/2560537},
 doi = {10.1145/2560537},
 journal = {ACM Trans. Comput. Syst.},
-month = feb,
+month = {feb},
 articleno = {Article 2},
 numpages = {70},
 keywords = {operating systems, seL4, Isabelle/HOL, L4, microkernel}
