--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -5,8 +5,11 @@
 %Более того, сейчас активно развиваются технологии, которые позволяют автоматизировать бытовые потребности человека.
 %К таким технологиям относится «интернет вещей» (англ. Internet of Things, IoT).
 %Это означает, что жизнь человека становится все более и более зависимой от программных систем.
-Для эффективного использования многоядерных систем широко используется многопоточное программное обеспечение, в том числе и системное программное обеспечение.
+%Для эффективного использования многоядерных систем широко используется многопоточное программное обеспечение, в том числе и системное программное обеспечение.
+Таким образом, задача повышения производительности компьютерных систем становится чрезвычайно важной.
+Развитие технологий многоядерности и многопоточности являются важнейшими направлениями решения данной задачи.
 Например, в ядре операционной системы может одновременно выполняться большое число (несколько десятков) совершенно различных активностей: обработчики прерываний, системные вызовы от пользовательских программ, внутренние службы ядра, например, планировщик, драйвера внешних устройств.
+Только за счет использования многопоточности современные системы могут обеспечивать необходимые показатели скорости и производительности.
 %
 
 %Информационные системы непрерывно развиваются и усложняются. 
@@ -34,15 +37,15 @@
 %Основной сложностью таких алгоритмов является обеспечение синхронизации между потоками и корректным использованием разделяемых ресурсов.
 %В связи с этим появляются новые типы ошибок, характерные только для параллельно исполняемого кода. 
 
-В дополнении к ошибкам, которые встречаются во всех видах программного обеспечения, многопоточные программы могут содержать специфические ошибки, связанные с параллельным выполнением: состояния взаимной блокировки и состояния гонки.
+В дополнении к ошибкам, которые встречаются во всех видах программного обеспечения, многопоточные программы могут содержать специфические ошибки, связанные с параллельным выполнением: например, состояния взаимной блокировки и состояния <<гонки>>.
 В общем случае состоянием гонки называют ситуацию, при которой поведение программы зависит от порядка или времени выполнения некоторых неконтролируемых событий.
 Важное уточнение заключается в том, что такое выполнение не всегда является ошибкой.
 Проблемы возникают тогда, когда разработчик не предусматривает некоторое из возможных поведений программы.
-Часто рассматривают более узкий класс — состояния гонки по данным. Эта ситуация возникает при одновременном доступе к данным из разных потоков (процессов).
+Часто рассматривают более узкий класс -- <<состояния гонки по данным>>. Эта ситуация возникает при одновременном доступе к данным из разных потоков (процессов).
 %Здесь и далее не будем различать потоки и процессы, так как их различия не имеют отношения к теме работы.
 Состояния гонки по данным становятся опасными в случае, если имеет место хотя бы один доступ на запись в разделяемую область памяти.
 %Пример!
-В этом случае результирующее значение переменной зависит от порядка выполнения инструкций, а в параллельно выполняемом коде последовательность выполнения инструкций не определена. 
+В этом случае результирующее значение переменной зависит от порядка выполнения инструкций, а в параллельно выполняемом коде, в общем случае, последовательность выполнения инструкций не определена. 
 
 %Стоит упомянуть о высокоуровневых состояниях гонки по данным.
 %Такие состояния гонки по данным отличается тем, что доступ производится к разным разделяемым данным, которые тем не менее являются семантически связанными.
@@ -54,26 +57,27 @@
 В этом случае все потоки системы находятся в ожидании некоторого разблокирующего действия от других потоков и не могут продолжить свое выполнение. 
 
 Оба класса ошибок так или иначе связаны с некорректной синхронизацией параллельно выполняющихся потоков.
-Такие ошибки, связанные с параллельным исполнением кода, искать и исправлять гораздо сложнее, чем ошибки в последовательном коде, так как необходимо представлять все возможные сценарии взаимодействия потоков.
-Кроме того, поиск и исправление таких ошибок осложняется случайным характером их проявлений -- ошибка может проявляться очень редко.
+Такие ошибки, связанные с параллельным исполнением кода, искать и исправлять гораздо сложнее, чем ошибки в последовательном коде, так как необходимо анализировать все возможные сценарии взаимодействия потоков.
+Кроме того, поиск и исправление таких ошибок осложняется случайным характером их проявлений, ошибка может проявляться очень редко.
 Это связано с тем, что для проявления ошибки необходимы некоторая конкретная последовательность и порядок действий различных потоков. 
-В системном программном обеспечении может использоваться не только обыкновенные примитивы синхронизации, но и специальные низкоуровневые, например, запреты прерываний и планирования. 
+В системном программном обеспечении могут использоваться не только обыкновенные примитивы синхронизации, но и специальные низкоуровневые, например, запреты прерываний и планирования. 
 Таким образом, обнаружить ошибку, связанную с некорректной синхронизацией потоков, вручную практически невозможно, поэтому для их поиска используются различные автоматизированные подходы.
+Кроме этого, для анализа системного программного обеспечения, например, операционных систем, требутся специализированные инструменты, которые будут учитывать их особенности.
 
-Обычно выделяют два класса подходов: статические, которые проводят анализ исходного кода программы, и динамические, которые анализируют поведение программы в процессе ее выполнения.
+Обычно выделяют два класса подходов к анализу программ: статические, которые проводят анализ исходного кода программы, и динамические, которые анализируют поведение программы в процессе ее выполнения.
 Каждый имеет свои достоинства и недостатки, например, методы динамического анализа обычно характеризуются высоким уровнем истинных предупреждений, в то время как статические методы позволяют покрыть больший объем кода.
-Таким образом, на данный момент не существует универсального подхода для анализа программ.
+На данный момент не существует универсального подхода для анализа программ.
 
 В прикладных пользовательских программах может быть достаточно провести тщательное тестирование, возможно, с помощью инструментов динамического анализа, чтобы проверить основные сценарии поведения программы.
 %Однако, такое тестирование не дает гарантий корректного поведения даже при тех же самых условиях и входных данных, что для пользовательских приложений является приемлемым вариантом.
-В случае же системного программного обеспечения цена пропущенной ошибки может быть слишком велика, поэтому необходим более тщательный анализ программного кода.
-Кроме того, устройство системного программного обеспечения отличается от прикладных программ, что затрудняет анализ, так как далеко не все методы принимают во внимание специфику системного программного обеспечения.
-Поэтому в дополнении к динамическому анализу применяют методы статической верификации.
+В случае же системного программного обеспечения цена пропущенной ошибки может быть слишком велика.
+Кроме того, некоторые сценарии поведения программы слишком сложно воспроизвести при реальном выполнении.
+Устройство системного программного обеспечения отличается от прикладных программ, что затрудняет анализ, так как далеко не все методы принимают во внимание специфику системного программного обеспечения.
+Поэтому применение только динамического анализу становится недостаточным, и в дополнение к ним применяются методы статической верификации.
 
 Методы статической верификации способны обеспечить доказательство отсутствия ошибок в некоторых заранее заданных предположениях, но при этом традиционно испытывают сложности при масштабировании на большие объемы исходного кода.
-Тем не менее, такие методы показывают высокую точность, что является важной особенностью при анализе такаого программного обеспечения, к которому предъявляются высокие требования качества.
-Развитие подобных методов позволит повысить качество системного программного обеспечения.
-
+Тем не менее, такие методы показывают высокую точность, что является важной особенностью при анализе такого программного обеспечения, к которому предъявляются высокие требования качества.
+%Развитие подобных методов позволит повысить качество системного программного обеспечения.
 Таким образом, разработка масштабируемого метода статической верификации для поиска состояний гонки является актуальной задачей.
 
 %В ядре операционной системы может одновременно выполняться большое число (несколько десятков) совершенно различных функций: обработчики прерываний, системные вызовы от пользовательских программ, внутренние службы ядра, например, планировщик, драйвера внешних устройств.
@@ -132,7 +136,7 @@
   \item Был предложен новый алгоритм, который является обобщением существующего алгоритма CPA, и доказана его корректность;
   \item Был предложен частный случай обобщенного алгоритма, который реализует подход с раздельным анализом потоков, и доказана его корректность;
   \item Разработан метод поиска состояний гонки и доказана его корректность;
-  \item Были проведены запуски инструмента на модулях ядра операционной системы Linux, а также на двух операционных системах реального времени;
+  %\item Были проведены запуски инструмента на модулях ядра операционной системы Linux, а также на двух операционных системах реального времени;
 \end{enumerate}
 
 %{\influence} \ldots
@@ -142,7 +146,7 @@
 %{\defpositions}
 \textbf{Положения, выносимые на публичное представление}
 \begin{enumerate}
-  \item Обобщенный алгоритм анализа программ, позволяющий определять различные ввиды анализа, и доказательство его корректности;
+  \item Обобщенный алгоритм анализа программ, позволяющий использовать различные виды анализа, и доказательство его корректности;
   \item Алгоритм, позволяющий проводить раздельный анализ потоков многопоточных программ, и доказательство его корректности;
   \item Метод поиска состояний гонки в многопоточных программах.
 \end{enumerate}
